logs/my_dag/populate_table_passengers/2021-11-01T01:24:57.553095+00:00/1.log
[2021-11-01 01:25:00,119] {taskinstance.py:1035} INFO - Dependencies all met for <TaskInstance: my_dag.populate_table_passengers manual__2021-11-01T01:24:57.553095+00:00 [queued]>
[2021-11-01 01:25:00,132] {taskinstance.py:1035} INFO - Dependencies all met for <TaskInstance: my_dag.populate_table_passengers manual__2021-11-01T01:24:57.553095+00:00 [queued]>
[2021-11-01 01:25:00,133] {taskinstance.py:1241} INFO - 
--------------------------------------------------------------------------------
[2021-11-01 01:25:00,133] {taskinstance.py:1242} INFO - Starting attempt 1 of 1
[2021-11-01 01:25:00,133] {taskinstance.py:1243} INFO - 
--------------------------------------------------------------------------------
[2021-11-01 01:25:00,142] {taskinstance.py:1262} INFO - Executing <Task(PostgresOperator): populate_table_passengers> on 2021-11-01 01:24:57.553095+00:00
[2021-11-01 01:25:00,146] {standard_task_runner.py:52} INFO - Started process 2625 to run task
[2021-11-01 01:25:00,148] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'my_dag', 'populate_table_passengers', 'manual__2021-11-01T01:24:57.553095+00:00', '--job-id', '54', '--raw', '--subdir', 'DAGS_FOLDER/checkModel.py', '--cfg-path', '/tmp/tmp2o2vbtxx', '--error-file', '/tmp/tmp0t8mwesh']
[2021-11-01 01:25:00,149] {standard_task_runner.py:77} INFO - Job 54: Subtask populate_table_passengers
[2021-11-01 01:25:00,179] {logging_mixin.py:109} INFO - Running <TaskInstance: my_dag.populate_table_passengers manual__2021-11-01T01:24:57.553095+00:00 [running]> on host 7b304be9cff3
[2021-11-01 01:25:00,217] {taskinstance.py:1429} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=my_dag
AIRFLOW_CTX_TASK_ID=populate_table_passengers
AIRFLOW_CTX_EXECUTION_DATE=2021-11-01T01:24:57.553095+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2021-11-01T01:24:57.553095+00:00
[2021-11-01 01:25:00,224] {base.py:79} INFO - Using connection to: id: postgres_default. Host: 172.23.0.3, Port: 5432, Schema: , Login: ***, Password: ***, extra: {}
[2021-11-01 01:25:00,227] {dbapi.py:225} INFO - Running statement: COPY passengers(passengerid, name, sex, age, sibsp, parch, ticket, fare, cabin, embarked) FROM `/opt/***/mydata/test.csv` DELIMITER ',' CSV HEADER;, parameters: None
[2021-11-01 01:25:00,228] {taskinstance.py:1703} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1332, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1458, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1514, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "`/"
LINE 1: ...sibsp, parch, ticket, fare, cabin, embarked) FROM `/opt/airf...
                                                             ^

[2021-11-01 01:25:00,238] {taskinstance.py:1280} INFO - Marking task as FAILED. dag_id=my_dag, task_id=populate_table_passengers, execution_date=20211101T012457, start_date=20211101T012500, end_date=20211101T012500
[2021-11-01 01:25:00,249] {standard_task_runner.py:91} ERROR - Failed to execute job 54 for task populate_table_passengers
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 292, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1332, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1458, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1514, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "`/"
LINE 1: ...sibsp, parch, ticket, fare, cabin, embarked) FROM `/opt/airf...
                                                             ^

[2021-11-01 01:25:00,280] {local_task_job.py:154} INFO - Task exited with return code 1
[2021-11-01 01:25:00,303] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
